@@ -406,8 +406,18 @@ int main(int argc, char** argv)
 	}
 	if(usessl) {
 		ERR_load_SSL_strings();
+#ifdef HAVE_OPENSSL_ADD_ALL_ALGORITHMS
 		OpenSSL_add_all_algorithms();
-		SSL_library_init();
+#else
+		OPENSSL_init_crypto(OPENSSL_INIT_ADD_ALL_CIPHERS
+			| OPENSSL_INIT_ADD_ALL_DIGESTS
+			| OPENSSL_INIT_LOAD_CRYPTO_STRINGS, NULL);
+#endif
+#ifdef HAVE_SSL_LIBRARY_INIT
+		(void)SSL_library_init();
+#else
+		(void)OPENSSL_init_ssl(0, NULL);
+#endif
 	}
 	send_em(svr, udp, usessl, noanswer, argc, argv);
 	checklock_stop();
